--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-sticky": "^6.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
