--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.1",
     "react-router-hash-link": "^2.4.3",
