--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "reaptcha": "^1.12.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
